# otus-python

./: README.md  requirements-dev.txt  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  exceptions.py  plane.py
homework_03/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
homework_04/: __init__.py  common.py  config.py  crud.py  db.py  jsonplaceholder_requests.py  main.py
homework_04/models/: __init__.py  crud.py  post.py  user.py
testing/test_homework_04/: conftest.py
